# kimi-code-FileSystemSandbox

./: .gitignore  LICENSE  README.ja.md  README.md  kimi_sandbox_Design_v1.md  pyproject.toml  sandbox.md
.github/workflows/: ci.yml
kimi_sandbox/: __init__.py  bwrap.py  cli.py  conda_integration.py  conda_policy.py  config.py  errors.py  paths.py  seccomp.py
tests/: test_bwrap_command.py  test_bwrap_v2.py  test_cli.py  test_cli_v2.py  test_conda_integration.py  test_conda_policy.py  test_conda_smoke.py  test_mod_v1.py  test_paths.py  test_paths_v2.py  test_seccomp.py
tests/smoke/: run_real_conda_smoke.sh  run_smoke.sh
