[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kimi-sandbox"
version = "0.2.0"
description = "Filesystem sandbox launcher for Kimi Code (bubblewrap-based)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []
keywords = ["sandbox", "bubblewrap", "bwrap", "seccomp", "kimi", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/VeronicaBiancaSerena/kimi-code-FileSystemSandbox"
Repository = "https://github.com/VeronicaBiancaSerena/kimi-code-FileSystemSandbox"
Issues = "https://github.com/VeronicaBiancaSerena/kimi-code-FileSystemSandbox/issues"
"Kimi Code" = "https://github.com/MoonshotAI"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
kimi-sandbox = "kimi_sandbox.cli:main"

[tool.setuptools.packages.find]
include = ["kimi_sandbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
